k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 
  labels:
    app: python-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: swaskar03/python-app:v2
        ports:
        - containerPort: 5000
